fix: 46490 extract getAll to custom repository and correct analista assignment in recuperarFornecedor